--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -42,5 +42,7 @@ body {
     margin: 0;
     background-color: #1A1A2E;
     background-image: url(bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-position-y: -80px;
 }
