--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ ul li a{
 }
 
 .gh:hover {
-    color: #111;
-    border-color: #111;
+    color: #161B22;
+    border-color: #161B22;
 }
 
 ul:hover li a:not(:hover) {
