--- a/math-quiz/style.css
+++ b/math-quiz/style.css
@@ -104,6 +104,20 @@ body {
 
     }
 
+    & #author {
+        margin-top: 45%;
+        font-size: 30px;
+    }
+
+    & h4 {
+        margin-top: 15%;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        font-weight: 300;
+        font-size: 45px;
+    }
+
 }
 
 #lose {
