--- a/math-quiz/style.css
+++ b/math-quiz/style.css
@@ -159,3 +159,12 @@ span {
     font-size: 30px;
     width: max-content;
 }
+
+.userans {
+    justify-content: center; 
+    display: flex;
+
+    & #youre {
+        margin-left: 10px;
+    }
+}
