--- a/shyraq/style.css
+++ b/shyraq/style.css
@@ -15,6 +15,7 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    outline: none;
 }
 
 .nav {
@@ -128,9 +129,18 @@ body {
     max-width: 480px;
     height: 720px;
     max-height: 720px;
-    background-color: #acacac;
     border: 5px solid black;
     border-radius: 40px;
+}
+
+.photo1 {
+    background-image: url("images/photo_2024-11-24_08-49-11.jpg");
+    background-size: cover;
+}
+
+.photo2 {
+    background-image: url("images/photo_2024-11-24_08-49-07.jpg");
+    background-size: cover;
 }
 
 .bottom-space {
